# Aule

./: .clang-format  CMakeLists.txt  README.md  vcpkg.json
Include/Aule/: Aule.h
Sample/: CMakeLists.txt  Main.cpp
Source/: Aule.cpp  AulePrecompiled.cpp  AulePrecompiled.h
